--- a/src/components/PictureManage/index.css
+++ b/src/components/PictureManage/index.css
@@ -2,3 +2,12 @@
   width: 1200px;
   margin: 0 auto;
 }
+
+img{  
+  cursor: pointer;  
+  transition: all 0.6s;  
+} 
+
+img:hover {
+  transform: scale(1.6);   
+}
