--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,10 +1,10 @@
 .login-box {
   width: 100%;
-  height: 100%;
-  padding-top: 15%;
+  height: 252px;
+  padding-top: 22%;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
 
 .user-login {
@@ -14,4 +14,18 @@
 
 .login-form {
   padding: 10px;
+}
+
+@media screen and (max-width: 375px) {
+  .user-login {
+    width: 100%;
+  }
+  .login-box {
+    width: 100%;
+    height: 100%;
+    padding-top: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
