--- a/src/pages/Main/index.css
+++ b/src/pages/Main/index.css
@@ -1,13 +1,17 @@
 .header {
+  position: fixed;
+  top: 0;
+  z-index: 1;
   height: 62px;
+  width: 100%;
   background-color: #2d2f33;
   color: #fff;
 }
 
 .header-inner {
   position: relative;
-  width: 1200px;
-  margin: 0 auto;
+  margin: 0 120px;
+  background-color: #2d2f33;
 }
 
 .header-logo {
@@ -31,7 +35,6 @@
   margin-left: 14px;
   margin-right: 10px;
   position: relative;
-  font-size: 20px;
   vertical-align: top;
   font-weight: 600;
   width: 80px;
@@ -63,7 +66,6 @@
   margin-left: 22px;
   margin-right: 10px;
   position: relative;
-  font-size: 20px;
   vertical-align: top;
   font-weight: 600;
   width: 80px;
@@ -92,6 +94,7 @@
   height: 70px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 10px 14px;
+  z-index: 1;
 }
 
 .margin-top-5 {
@@ -113,3 +116,121 @@
   justify-content: flex-start;
   align-items: center;
 }
+
+@media screen and (max-width: 600px) {
+  .header-inner {
+    position: relative;
+    margin: 0 45px;
+    background-color: #2d2f33;
+  }
+
+  .logout {
+    position: absolute;
+    right: -25px;
+    top: -12px;
+    vertical-align: middle;
+  }
+
+  .header-logo img {
+    width: 60px;
+  }
+
+  .header-img {
+    display: inline-block;
+    padding: 21px 0;
+    width: 82px;
+    height: 62px;
+    text-align: center;
+    vertical-align: top;
+    color: #fff;
+    cursor: pointer;
+    position: relative;
+    font-size: 14px;
+  }
+
+  .header-pic,
+  .header-upload {
+    line-height: 20px;
+    display: inline-block;
+    padding-left: 10px;
+    margin-left: 0px;
+    margin-right: 0px;
+    position: relative;
+    vertical-align: top;
+    font-weight: 600;
+    width: 80px;
+    text-align: center;
+  }
+
+  .header-manage {
+    line-height: 20px;
+    display: inline-block;
+    padding-left: 10px;
+    margin-left: 7px;
+    margin-right: 10px;
+    position: relative;
+    vertical-align: top;
+    font-weight: 600;
+    width: 80px;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .header-inner {
+    position: relative;
+    margin: 0 70px;
+    background-color: #2d2f33;
+  }
+  .logout {
+    position: absolute;
+    right: 15px;
+    top: -12px;
+    margin-top: 30px;
+    margin-right: 80px;
+    vertical-align: middle;
+  }
+
+  .header-logo img {
+    width: 70px;
+  }
+
+  .header-img {
+    display: inline-block;
+    padding: 21px 0;
+    width: 82px;
+    height: 62px;
+    text-align: center;
+    vertical-align: top;
+    color: #fff;
+    cursor: pointer;
+    position: relative;
+    font-size: 16px;
+  }
+
+  .header-pic,
+  .header-upload {
+    line-height: 20px;
+    display: inline-block;
+    padding-left: 10px;
+    margin-left: 0px;
+    margin-right: 0px;
+    position: relative;
+    vertical-align: top;
+    font-weight: 600;
+    width: 80px;
+    text-align: center;
+  }
+
+  .header-manage {
+    line-height: 20px;
+    display: inline-block;
+    padding-left: 10px;
+    margin-left: 7px;
+    margin-right: 10px;
+    position: relative;
+    vertical-align: top;
+    font-weight: 600;
+    width: 80px;
+  }
+}
+
