--- a/src/components/PictureWall/index.css
+++ b/src/components/PictureWall/index.css
@@ -49,6 +49,50 @@
   word-wrap: break-word;
   text-align: center;
 }
+.loader,
+.loader:before,
+.loader:after {
+  border-radius: 50%;
+}
+.loader:before,
+.loader:after {
+  position: absolute;
+  top: -0.1em;
+  content: "";
+  width: 5.2em;
+  height: 10.2em;
+  background: #56b4ab;
+}
+.loader {
+  font-size: 11px;
+  text-indent: -99999em;
+  margin: 10% auto;
+  position: relative;
+  width: 10em;
+  height: 10em;
+  box-shadow: inset 0 0 0 1em #fff;
+}
+.loader:before {
+  border-radius: 10.2em 0 0 10.2em;
+  left: -0.1em;
+
+  transform-origin: 5.2em 5.1em;
+  animation: load2 2s infinite 1.5s;
+}
+.loader:after {
+  border-radius: 0 10.2em 10.2em 0;
+  left: 5.1em;
+  transform-origin: 0px 5.1em;
+  animation: load2 2s infinite;
+}
+@keyframes load2 {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
 @media screen and (max-width: 600px) {
   .container {
