--- a/src/components/PictureWall/index.css
+++ b/src/components/PictureWall/index.css
@@ -83,9 +83,9 @@
   border-radius: 0 10.2em 10.2em 0;
   left: 5.1em;
   transform-origin: 0px 5.1em;
-  animation: load2 2s infinite;
+  animation: load 2s infinite;
 }
-@keyframes load2 {
+@keyframes load {
   0% {
     transform: rotate(0deg);
   }
@@ -105,7 +105,7 @@
   }
 
   .card {
-    width: 25%;
+    width: 50%;
     padding: 0.75rem;
     margin-bottom: 2rem;
     text-align: center;
