--- a/src/pages/Main/index.css
+++ b/src/pages/Main/index.css
@@ -45,7 +45,7 @@
   background-color: rgba(255, 255, 255, 0.18);
   color: #fff;
 }
-.is-acitve {
+.is-active {
   background-color: rgba(255, 255, 255, 0.18);
   color: #fff;
   font-size: 16px;
